--- a/meeting/debrief-2019-10-31.md
+++ b/meeting/debrief-2019-10-31.md
@@ -5,7 +5,7 @@ Ce petit debrief a eu lieu pour poser les bases de notre organisation. Le but pr
 Afin de démarrer sur de bonnes bases, nous n'allons pas immédiatement nous lancer dans le développement du projet. Olivier et moi-même sommes en train de rédiger une petite *documentation* présentant les bases des différentes technologies utilisées. **Mettez ce weekend à profit** pour compulser un maximum d'informations sur les *imprimantes 3D*, *Arduino* (et le *langage C*) et *Raspberry*. Il est important que chacun ait une vision globale du fonctionnement d'une imprimante 3D, car nous ferons bientôt un brainstorming pour concevoir la nôtre.
 
 ## Outils
-Nous travaillerons essentiellement au moyen de trois plateformes :
+Nous travaillerons essentiellement au moyen de quatre plateformes :
 * Le groupe Ryver
 * [Le dépôt GitHub](https://github.com/512LouisWicket/3D-printer)
 * Le Trello
